# ImaGenie

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  augment.py  environment.yaml  load.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
docs/: Makefile  capybara.ipynb  conf.py  example.ipynb  index.md
docs/source/: imagenie.rst  index.rst  modules.rst
imagenie/docs/: conf.py  make.bat
src/: test.ipynb
src/imagenie/: augment.py  blur.py  flip.py  grayscale.py  scale.py
src/imagenie/.ipynb_checkpoints/: flip-checkpoint.py
tests/: test_augment.py  test_blur.py  test_flip.py  test_grayscale.ipynb  test_grayscale.py  test_imagenie.py  test_scale.py
