[tool.poetry]
name = "imagenie"
version = "0.1.0"
description = "Scale, flip, greyscale and blur images!!"
authors = ["Yuhan Fan,Yichun Liu,Agam Sanghera,Gurmehak Kaur"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
