[tool.poetry]
name = "imagenie"
version = "0.1.0"
description = "A python package to support essential trasformations on image datasets"
authors = ["Agam Sanghera, Gurmehak Kaur, Yuhan Fan, Yichun Liu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.10.0"
pytest = "^8.3.4"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"
myst-nb = {version = "^1.1.2", python = "^3.11"}
sphinx-autoapi = "^3.4.0"
sphinx-rtd-theme = "^3.0.2"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
